# QtPlayground

./: .gitignore  README.md
BallsCollision/: CMakeLists.txt
BallsCollision/BallsCollision/: CMakeLists.txt  arrow.cpp  arrow.h  ball.cpp  ball.h  collisionStrategy.cpp  collisionStrategy.h  config.hpp  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
HttpServer/IntroHttpServer/: CMakeLists.txt  main.cpp  res.hpp  resources.qrc  serverApi.cpp  serverApi.h  utils.cpp  utils.h
HttpServer/IntroHttpServer/assets/: about.html
HttpServer/IntroHttpServer/db/: fileStorage.h
HttpServer/IntroHttpServer/db/private/: scopedFileStorage.cpp  scopedFileStorage.h  systemFileStorage.cpp  systemFileStorage.h
